--- a/docs/userguide.tex
+++ b/docs/userguide.tex
@@ -29,7 +29,7 @@
 
         \huge{Metasploit Framework User Guide}
 		\ \\[10mm]
-		\large{Version 2.3}
+		\large{Version 2.4}
 		\\[120mm]
 		
         \small{\url{http://www.metasploit.com/}}
@@ -48,7 +48,7 @@
 \chapter{Introduction}
 
 \par
-This document is an attempt at a user guide for version 2.3 of the Metasploit
+This document is an attempt at a user guide for version 2.4 of the Metasploit
 Framework, its goal is to provide a basic overview of what the Framework is, how
 it works, and what you can do with it. As with most open-source projects,
 correct documentation takes back seat to actual development. If you would like
@@ -190,7 +190,7 @@ systems. For more information on tab completion, please refer to appendix
 The \texttt{msfconsole} startup will similar to the text below.
 
 \begin{verbatim}
-+ -- --=[ \texttt{msfconsole} v2.3 [63 exploits - 71 payloads]
++ -- --=[ msfconsole v2.4 [71 exploits - 75 payloads]
 
 msf > 
 \end{verbatim}
