Spanish user guide, fixed warning in SMB, fixed russian credits in new smf exploit

--- a/docs/userguide_ES.tex
+++ b/docs/userguide_ES.tex
@@ -204,7 +204,7 @@ msf >
     \label{STARTED-CLI}
 \par
 Si buscas otra manera de probar exploit código o para obtener escrituras
-automáticas o simplemente no quieres usar la línea de comando, \textt{msfcli} 
+automáticas o simplemente no quieres usar la línea de comando, \texttt{msfcli} 
 quizás está es la solución.  Este interfaz toma un parámetro de comparación cómo la 
 primera opción, siguiendo con otras  opciones de forma VAR=VAL, para terminar con
 el ultimo parámetro que defina la acción.  El parámetro de comparación es usado
@@ -656,13 +656,13 @@ refieran al website de Gera:
 
 \url{http://community.corest.com/~gera/ProgrammingPearls/InlineEgg.html}
 
-######################
+
 \section{Impurity ELF Injection}
 \par
 Impurity es un concepto desarrollado por Alexander Cuttergo que describió un método
 de cargar y ejecutar un programa ELF dentro memoria.  Este método permite que escribas
 cualquier payload que gustes en C, solamente requiere un payload especial llamado 
-\texttt{linux_\ia32\_reverse\_impurity} ajustado con la opción PEXEC.  PEXEC debe de ser
+\texttt{linux\_ia32\_reverse\_impurity} ajustado con la opción PEXEC.  PEXEC debe de ser
 ajustado al ELF payload que escribiste.
 
 
